Prevent flash of horizontal scroll bar

--- a/src/assets/style.tmpl.css
+++ b/src/assets/style.tmpl.css
@@ -60,6 +60,7 @@ html.page header.main::after {
 body > section,
 body > hr,
 body > footer {
+  overflow: visible;
   opacity: 1;
   animation: 0.2s ease-in dancing-fade-in;
 }
